--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-consumer_key=hvJ3Mc5hfuw6FbuW0GwsrNail
-consumer_secret=77g1My9L2oEyzY137okPsRAlB2hOjkLulyxZRJ00lbVMY8NKwe
+consumer_key= tweepy consumer_key
+consumer_secret=tweepy consumer secret
 callback_uri=oob    
-spredsheet_url=https://docs.google.com/spreadsheets/d/1PoAJO-u_WQKgPWO478rduiss6ooYMqitqxdE-LZzJkc/edit?usp=sharing
+spredsheet_url= spreadsheet_url
